[project]
name = "kong-batch"
version = "0.9.4"
description = "Batch job submission and management tool"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Paul Gessinger", email = "hello@paulgessinger.com" }
]
dependencies = [
  "click>=8.1.8",
  "coloredlogs>=15.0.1",
  "halo>=0.0.31",
  "humanfriendly>=9.2",
  "jinja2>=3.1.6",
  "notifiers>=1.3.6",
  "peewee>=3.18.2",
  "psutil>=5.9.8",
  "python-dateutil>=2.9.0.post0",
  "pytimeparse>=1.1.8",
  "pyyaml>=6.0.2",
  "schema>=0.7.7",
  "sh>=1.14.3",
  "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/paulgessinger/kong/"

[project.scripts]
kong = "kong.cli:main"

[project.optional-dependencies]
ipython = [
  "ipython",
]

[dependency-groups]
dev = [
    "coverage>=5.5",
    "ipython>=7.34.0",
    "mypy>=0.991",
    "pytest-cov>=2.12.1",
    "pytest-xdist>=3.5.0",
    "ruff>=0.12.12",
    "pytest>=8.4.2",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "kong"
