[project]
name = "kong-batch"
version = "0.9.4"
description = "Batch job submission and management tool"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Paul Gessinger", email = "hello@paulgessinger.com" }
]
dependencies = [
  "click>=8.0.1,<9.0.0",
  "PyYAML>=6.0.2,<7.0.0",
  "halo>=0.0.31,<0.1.0",
  "sh>=1.13.1,<2.0.0",
  "python-dateutil>=2.8.1,<3.0.0",
  "peewee>=3.13.3,<4.0.0",
  "coloredlogs>=15.0.1,<16.0.0",
  "humanfriendly>=9.2,<10.0",
  "psutil>=5.7.2,<6.0.0",
  "schema>=0.7.2,<0.8.0",
  "tqdm>=4.48.0,<5.0.0",
  "notifiers>=1.2.1,<2.0.0",
  "Jinja2>=3.0.1,<4.0.0",      # normalized; replaces duplicate poetry entries
  "pytimeparse>=1.1.8,<2.0.0",
  "pytz>=2021.1,<2022.0",
]

[project.urls]
Homepage = "https://github.com/paulgessinger/kong/"

[project.scripts]
kong = "kong.cli:main"

[project.optional-dependencies]
ipython = [
  "ipython",
]

[dependency-groups]
dev = [
  "pytest>=6.0.1,<9.0.0",
  "coverage>=5.2,<6.0.0",
  "pytest-cov>=2.10.1,<3.0.0",
  "pytest-rerunfailures>=9.0,<10.0",
  "mypy>=0.910,<1.0.0",
  "flake8>=3.8.3,<4.0.0",
  "black>=21.6b0,<22.0",
  "tox>=3.24.0,<4.0.0",
  "sphinx-autodoc-typehints>=1.11.0,<2.0.0",
  "pytest-xdist>=3.5.0",
  "ipython",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "kong"

[tool.pytest.ini_options]
addopts = "--reruns 3"
